[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-exploration"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "Kenneth Yang", email = "kjy5@uw.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "notebook==7.5.1",
    "plyfile==1.1.3",
    "numpy==2.4.0",
    "matplotlib==3.10.8"
]

[project.urls]
Documentation = "https://github.com/Kenneth Yang/model-exploration#readme"
Issues = "https://github.com/Kenneth Yang/model-exploration/issues"
Source = "https://github.com/Kenneth Yang/model-exploration"

[tool.hatch.version]
path = "src/model_exploration/__about__.py"

[tool.hatch.envs.default]
python = "3.14"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/model_exploration tests}"

[tool.coverage.run]
source_pkgs = ["model_exploration", "tests"]
branch = true
parallel = true
omit = [
    "src/model_exploration/__about__.py",
]

[tool.coverage.paths]
model_exploration = ["src/model_exploration", "*/model-exploration/src/model_exploration"]
tests = ["tests", "*/model-exploration/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
